# patchwork

./: .gitattributes  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  README.md  models.py  pyproject.toml
backend/app/: dependencies.py  enums.py  main.py  models.py  product_seed_models.py  product_store.py
backend/app/api/: routes.py
backend/app/html/: routes.py
backend/app/html/templates/: about.html  account.html  cart.html  create-account.html  header.html  layout.html  login.html  product.html  products.html  tailwind.css
backend/app/html/templates/partials/: cart-added.html  cart-items.html  search-results.html
backend/app/static/css/: input.css  tailwind.css
backend/app/static/css/htmx/: input.css  tailwind.css
backend/app/static/css/react/: tailwind.css
backend/app/static/js/: header-scroll.js
backend/db/: products.json  schema.sql  seed.sh
frontends/angular/app/: angular.json  package-lock.json  package.json
frontends/flask-htmx/: pyproject.toml
frontends/react/: package-lock.json  package.json  vite.config.js
frontends/react/src/: App.css  App.jsx  CollectionHero.jsx  Header.css  Header.jsx  HoverVideoController.jsx  font.css  index.css
frontends/vue/: README.md  app.vue  index.html  package-lock.json  package.json  vite.config.js
lighthouse-results/: angular-lighthouse.html  htmx-lighthouse.html  react-lighthouse.html  vue-lighthouse.html
lighthouse-results/rohan-tests/: angular-lighthouse.html  htmx-lighthouse.html  react-lighthouse.html  vue-lighthouse.html
(+42 files in other folders)
