[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py314"
extend-select = ["E", "I", "F", "UP"]

