[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for patchwork."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.133.1",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
target-version = "py314"
lint.extend-select = ["E", "I", "F", "UP"]

